[package]
authors = ["The RustWasm Developers"]
categories = ["wasm"]
description = "My super awesome Rust, WebAssembly, and Parcel project!"
license = "Apache-2.0/MIT"
name = "rust-parcel"
readme = "./README.md"
repository = "https://github.com/rustwasm/rust-parcel-template"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1.5"
wasm-bindgen = {version  = "0.2.29", features = ["serde-serialize"]}
wasm-bindgen-futures = { version = "0.3.20", features = ["futures_0_3"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.5", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however. Also as of wee_alloc v0.4.2, does not yet work on stable
# (tested with rust v1.31.1).
wee_alloc = { version = "0.4.2", optional = true }
futures-preview = { version = "=0.3.0-alpha.17", features = ["async-await", "nightly"] }
wasm-timer = "0.2.0"
console_log = "0.1.2"
log = "0.4.8"
web_logger = "0.2.0"
js-sys = "0.3.25"
serde = { version = "1.0.98", features = ["derive"] }
serde_derive = "1.0.98"
yew = "0.7.0"

[dependencies.web-sys]
version = "0.3.6"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  "Notification",
  "WebSocket",
  "MessageEvent",
  "ErrorEvent",
]

[features]
default = ["console_error_panic_hook"]

[profile.release]
lto = true
opt-level = 's'
